docker/kustomize/overlays/devjim/mongodb-srv.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongodb
  name: mongodb
spec:
  ports:
    - name: "mongodb"
      protocol: "TCP"
      port: 27017
      targetPort: 27017
      nodePort: 32000   # unique port for same cluster across different namespaces
  type: NodePort
  selector:
    app: mongodb
