docker/kustomize/overlays/devjim/api-ingress.yaml
# ingress for api
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  labels:
    app: api
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
        - minikube.local
      secretName: selfsigned-cert-tls
  rules:
  - host: minikube.local
    http:
      paths:
      - path: "/vcellapi(/|$)(.*)"
        pathType: ImplementationSpecific
        backend:
          service:
              name: api
              port:
                number: 8080
