docker/kustomize/overlays/devjim/s3proxy-ingress.yaml
# ingress for api
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s3proxy-ingress
  labels:
    app: s3proxy
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
        - minikube.local
      secretName: selfsigned-cert-tls
  rules:
  - host: minikube.local
    http:
      paths:
      # prefix path of /n5 will route to s3proxy service and /n5 prefix will be stripped
      - path: "/n5(/|$)(.*)"
        pathType: ImplementationSpecific
        backend:
          service:
            name: s3proxy
            port:
              number: 80
