docker/kustomize/overlays/devjim/webapp-ingress.yaml
# ingress for api
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  labels:
    app: api
spec:
  tls:
    - hosts:
        - webapp.minikube.local
      secretName: selfsigned-cert-tls
  rules:
  - host: webapp.minikube.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp
            port:
              number: 80
